# PartUV

./: .gitignore  .gitmodules  CMakeLists_main.txt  README.md  bindings.cpp  build.sh  main.cpp  pyproject.toml  requirements.txt
config/: config.yaml
demo/: partuv_demo.py
doc/: build.md  config.md
pack/: color_components.py  eval_charts.py  install_uvp.py  pack.py  pack_blender.py  pack_parts.py  uv_distortion.py
scripts/: build_wheelhouse.sh
src/: Component.cpp  Config.h  pipeline.cpp  pipeline.h
src/lscm/: CMakeLists=test.txt  build.sh
src/lscm/src/: Mesh.cpp  Mesh.h
src/triangle_intersection/: install.sh
